--- a/Unit1Pathway4_LemonadeApp/app/src/main/res/drawable/ic_launcher_lemonade_background.xml
+++ b/Unit1Pathway4_LemonadeApp/app/src/main/res/drawable/ic_launcher_lemonade_background.xml
@@ -13,15 +13,15 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Lemonade" parent="Theme.MaterialComponents.DayNight">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/yellow_primary</item>
-        <item name="colorPrimaryVariant">@color/yellow_dark</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="0.6"
+      android:scaleY="0.6">
+    <path
+        android:pathData="M-3.628,-3.628h187.257v187.257h-187.257z"
+        android:fillColor="#02b5c8"/>
+  </group>
+</vector>
