--- a/Unit2TipCalculator/app/src/main/res/layout/activity_main.xml
+++ b/Unit2TipCalculator/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/etCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        
         android:hint="@string/cost_of_service"
         android:inputType="numberDecimal"
         android:textSize="24sp"
@@ -87,7 +88,7 @@
         android:id="@+id/tvTipAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tip Amount"
+        tools:text="Tip Amount: $10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />
 
